--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
     </section>
 </div>
 </main>
+<footer style="text-align: center;">
+    <p style="font-weight: bold;">All Rights Reserved &copy; JAY TAJALE MALAZARTE 2024</p>
+    <a href="#home" style="text-align: center;"> Back to Home</a> 
+</footer>
 </body>
 </html>
